# terminal-emulator-x11

./: CMakeLists.txt  Makefile  README.md  main.c  quickbuild.sh
include/: cleanup.h  pty_pt.h  render.h  x11_if.h
src/: cleanup.c  pty_pt.c  render.c  x11_if.c
